[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chama-api"
version = "1.0.0"
description = "FastAPI REST service for chama management — JWT auth scaffold, CRUD endpoints, OpenAPI docs."
readme = "README.md"
license = {text = "CC-BY-NC-ND-4.0"}
authors = [{name = "Gabriel Mahia", email = "contact@aikungfu.dev"}]
keywords = ["chama", "rosca", "kenya", "fastapi", "rest-api", "fintech", "africa", "python"]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.0",
]

[project.optional-dependencies]
server = ["uvicorn[standard]>=0.27"]
dev    = ["pytest>=7", "httpx>=0.27", "ruff"]

[project.urls]
Homepage = "https://github.com/gabrielmahia/chama-api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
